# omytea-quantum-substrate

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/omytea/: __init__.py
src/omytea/dynamics/: __init__.py
tests/: test_density.py  test_joint_belief.py  test_lindblad.py  test_models.py  test_quantum.py
